force-app/main/default/objects/PAD__c/PAD__c.object-meta.xml
<CustomObject>
    <description>Plano de Atendimento a Demanda</description>
    <label>PAD</label>
    <nameField>
        <displayFormat>PAD - {00000000}</displayFormat>
        <label>Código do PAD</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAD&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>