force-app/main/default/objects/PAD__c/fields/Aeronave__c.field-meta.xml
<CustomField>
    <fullName>Aeronave__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Aeronave do PAX. Esta aeronave deve ser um item do contrato.</description>
    <inlineHelpText>Aeronave do PAX. Esta aeronave deve ser um item do contrato.</inlineHelpText>
    <label>Aeronave</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ItemContrato__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Aeronave</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ItemContrato__c</referenceTo>
    <relationshipLabel>PAD&apos;s</relationshipLabel>
    <relationshipName>PADs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>