force-app/main/default/objects/PAD__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <description>Contrato ao qual o PAD está vinculado.</description>
    <inlineHelpText>Contrato ao qual o PAD está vinculado.</inlineHelpText>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>PAD&apos;s</relationshipLabel>
    <relationshipName>PAD_s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>