force-app/main/default/objects/PAD__c/fields/Distancia_Km__c.field-meta.xml
<CustomField>
    <fullName>Distancia_Km__c</fullName>
    <description>Distância considerada para cálculos de faturamento de voos regulares deste PAD.</description>
    <inlineHelpText>Distância considerada para cálculos de faturamento de voos regulares deste PAD.</inlineHelpText>
    <label>Distancia (Km)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>