force-app/main/default/objects/PAD__c/fields/FimVigencia__c.field-meta.xml
<CustomField>
    <fullName>FimVigencia__c</fullName>
    <description>Data de término da vigência do PAD.</description>
    <inlineHelpText>Data de término da vigência do PAD.</inlineHelpText>
    <label>Fim da Vigência</label>
    <required>true</required>
    <type>Date</type>
</CustomField>