force-app/main/default/objects/PAD__c/fields/InicioVigencia__c.field-meta.xml
<CustomField>
    <fullName>InicioVigencia__c</fullName>
    <description>Data de início da vigência do PAD.</description>
    <inlineHelpText>Data de início da vigência do PAD.</inlineHelpText>
    <label>Início da Vigência</label>
    <required>true</required>
    <type>Date</type>
</CustomField>