force-app/main/default/objects/PAD__c/fields/Locacao__c.field-meta.xml
<CustomField>
    <fullName>Locacao__c</fullName>
    <description>Identificar neste campo o bloco ou o campo onde a unidade marítima está localizada.</description>
    <inlineHelpText>Identificar neste campo o bloco ou o campo onde a unidade marítima está localizada.</inlineHelpText>
    <label>Locação</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>