force-app/main/default/objects/PAD__c/fields/MinimoPax__c.field-meta.xml
<CustomField>
    <fullName>MinimoPax__c</fullName>
    <description>Número mínimo de passageiros por perna para o voo ser considerado regular</description>
    <inlineHelpText>Número mínimo de passageiros por perna para o voo ser considerado regular</inlineHelpText>
    <label>PAX Mínimo</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>