force-app/main/default/objects/PAD__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Local de origem para os voos dos  PAD</description>
    <inlineHelpText>Local de origem para os voos dos  PAD</inlineHelpText>
    <label>Origem</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Local__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Padrão</value>
        </filterItems>
        <filterItems>
            <field>Local__c.Tipo__c</field>
            <operation>equals</operation>
            <value>Onshore</value>
        </filterItems>
        <infoMessage>Pesquise o aeródromo de origem</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Origens PAD</relationshipLabel>
    <relationshipName>OrigemPAD</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>