force-app/main/default/objects/PAD__c/fields/PesoPax__c.field-meta.xml
<CustomField>
    <fullName>PesoPax__c</fullName>
    <description>Campo informativo referente ao peso de pax por voo.</description>
    <inlineHelpText>Campo informativo referente ao peso de pax por voo.</inlineHelpText>
    <label>Peso de Pax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>