force-app/main/default/objects/PAD__c/fields/Prefixo__c.field-meta.xml
<CustomField>
    <fullName>Prefixo__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/ItemContrato__c/&quot;&amp; Aeronave__r.Id &amp;&quot;/view&quot;,  Aeronave__r.Aeronave__r.Name, &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prefixo</label>
    <type>Text</type>
</CustomField>