force-app/main/default/objects/PAD__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indica se o PAD está ativo ou inativo.</description>
    <formula>IF(TODAY()&gt;= InicioVigencia__c  &amp;&amp; TODAY()&lt;= FimVigencia__c, &quot;Ativo&quot;,&quot;Inativo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indica se o PAD está ativo ou inativo.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>