force-app/main/default/objects/PAD__c/fields/Trecho__c.field-meta.xml
<CustomField>
    <fullName>Trecho__c</fullName>
    <formula>Origem__r.CodigoLocal__c  &amp; &quot; &gt; &quot; &amp; Destino__r.CodigoLocal__c  &amp; &quot; &gt; &quot; &amp; Origem__r.CodigoLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rota</label>
    <type>Text</type>
</CustomField>