force-app/main/default/objects/PAD__c/fields/Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Vigencia__c</fullName>
    <description>Mostra a data de início e término da vigência.</description>
    <formula>TEXT(InicioVigencia__c) &amp; &quot; -&gt;&quot; &amp;TEXT( FimVigencia__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Mostra a data de início e término da vigência.</inlineHelpText>
    <label>Vigência</label>
    <type>Text</type>
</CustomField>